--- a/source_data/instances/vital_signs/frmsize.yaml
+++ b/source_data/instances/vital_signs/frmsize.yaml
@@ -1,61 +1,24 @@
----
-#RACE
-- name: "Body Frame Size"
-  identifier: "FRMSIZE"
-  based_on: "Base Observation"
-  identified_by:  
-    name: "Test"
+- name: Body Frame Size
+  identifier: FRMSIZE
+  based_on: Base Observation
+  identified_by:
+    name: Test
     enabled: true
-    collect: false  
-    has_complex_datatype: 
-     - 
-      short_name: CD 
-      has_property: 
-      -
-        name: "code"
-        question_text: ""
-        prompt_text: ""
-        format: "8"
-        has_coded_value:
-        - 
-          cl: C66741
-          cli: C49680
-      
+    collect: false
+    data_type:
+    - name: coding
+      value_set:
+      - cl: C66741
+        cli: C49680
   has_items:
-  - name: "Category Code"
-    enabled: false
-  - name: "Subcategory Code"
-    enabled: false
-  - name: "Position"
-    enabled: false
-  - name: "Site of Administration"
-    enabled: false
-  - name: "Laterality"
-    enabled: false
-  - name: "Method"
-    enabled: false 
-  - name: "Not Done"
-    enabled: false
-  - name: "Reason Not Done"
-    enabled: false 
-  - name: "Result"
-    enabled: true  
-    has_complex_datatype: 
-    - 
-      short_name: CD
-      has_property: 
-      - 
-        :label: code
-        question_text: "Body Frame Size"
-        prompt_text: "Result"
-        format: "200"
-        has_coded_value:
-        - 
-          cl: C66733
-          cli: C25376
-        - 
-          cl: C66733
-          cli: C49507
-        - 
-          cl: C66733
-          cli: C49508
+  - name: Result
+    enabled: true
+    data_type:
+    - name: coding
+      value_set:
+      - cl: C66733
+        cli: C25376
+      - cl: C66733
+        cli: C49507
+      - cl: C66733
+        cli: C49508
