--- a/source_data/instances/vital_signs/oxysat.yaml
+++ b/source_data/instances/vital_signs/oxysat.yaml
@@ -1,4 +1,4 @@
-- name: Oxygen Saturation Measurement
+- name: Oxygen Saturation
   identifier: OXYSAT
   based_on: Base Observation
   identified_by:
