--- a/converted_data/BASOBLD.yaml
+++ b/converted_data/BASOBLD.yaml
@@ -8,11 +8,22 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C65047
         cli: C64470
   has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C71620
+        cli: C67255
   - name: Specimen
     enabled: true
     data_type:
     - name: coding
-      value_set: []
+      value_set:
+      - cl: C66742
+        cli: C49487
+      - cl: C66742
+        cli: C49488
