--- a/converted_data/BMI.yaml
+++ b/converted_data/BMI.yaml
@@ -8,6 +8,17 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C66741
         cli: C16358
-  has_items: []
+  has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C71620
+        cli: C49671
+      - cl: C66770
+        cli: C49671
+      - cl: C71620
+        cli: C67334
