--- a/converted_data/FRMSIZE.yaml
+++ b/converted_data/FRMSIZE.yaml
@@ -8,6 +8,17 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C66741
         cli: C49680
-  has_items: []
+  has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C66733
+        cli: C25376
+      - cl: C66733
+        cli: C49507
+      - cl: C66733
+        cli: C49508
