--- a/converted_data/GLUCBLD.yaml
+++ b/converted_data/GLUCBLD.yaml
@@ -8,9 +8,18 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C65047
         cli: C105585
   has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C71620
+        cli: C67015
+      - cl: C71620
+        cli: C64387
   - name: Specimen
     enabled: true
     data_type:
@@ -20,4 +29,8 @@
     enabled: true
     data_type:
     - name: coding
-      value_set: []
+      value_set:
+      - cl: C66742
+        cli: C49487
+      - cl: C66742
+        cli: C49488
