--- a/converted_data/GLUCUA.yaml
+++ b/converted_data/GLUCUA.yaml
@@ -8,9 +8,14 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: NA
         cli: NEW_1
   has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set: []
   - name: Specimen
     enabled: true
     data_type:
@@ -20,4 +25,8 @@
     enabled: true
     data_type:
     - name: coding
-      value_set: []
+      value_set:
+      - cl: C66742
+        cli: C49487
+      - cl: C66742
+        cli: C49488
