--- a/converted_data/HEIGHT.yaml
+++ b/converted_data/HEIGHT.yaml
@@ -8,6 +8,23 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: NA
         cli: C164634
-  has_items: []
+  has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C66770
+        cli: C49668
+      - cl: C71620
+        cli: C49668
+      - cl: C71620
+        cli: C48500
+      - cl: C66770
+        cli: C48500
+      - cl: C66770
+        cli: C41139
+      - cl: C71620
+        cli: C41139
