--- a/converted_data/KBLD.yaml
+++ b/converted_data/KBLD.yaml
@@ -8,11 +8,26 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C65047
         cli: C64853
   has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C71620
+        cli: C67474
+      - cl: C71620
+        cli: C67473
+      - cl: C71620
+        cli: C64387
   - name: Specimen
     enabled: true
     data_type:
     - name: coding
-      value_set: []
+      value_set:
+      - cl: C66742
+        cli: C49487
+      - cl: C66742
+        cli: C49488
