--- a/converted_data/RESP.yaml
+++ b/converted_data/RESP.yaml
@@ -8,6 +8,11 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C66741
         cli: C49678
-  has_items: []
+  has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set: []
