--- a/converted_data/TEMP.yaml
+++ b/converted_data/TEMP.yaml
@@ -8,21 +8,44 @@
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
+      - cl: C66741
         cli: C174446
   has_items:
+  - name: Result
+    enabled: true
+    data_type:
+    - name: quantity
+      value_set:
+      - cl: C66770
+        cli: C42559
+      - cl: C71620
+        cli: C42559
+      - cl: C66731
+        cli: C16576
+      - cl: C66732
+        cli: C16576
+      - cl: C66770
+        cli: C44277
+      - cl: C71620
+        cli: C44277
+      - cl: C65047
+        cli: C64853
+      - cl: C71620
+        cli: C42537
+      - cl: C66770
+        cli: C42537
   - name: Site of Administration
     enabled: true
     data_type:
     - name: coding
       value_set:
-      - cl: TO BE LOOKED UP
-        cli: AXILLA
-      - cl: TO BE LOOKED UP
-        cli: EAR
-      - cl: TO BE LOOKED UP
-        cli: FOREHEAD
-      - cl: TO BE LOOKED UP
-        cli: ORAL CAVITY
-      - cl: TO BE LOOKED UP
-        cli: RECTUM
+      - cl: C74456
+        cli: C12674
+      - cl: C74456
+        cli: C12394
+      - cl: C74456
+        cli: C89803
+      - cl: C74456
+        cli: C12421
+      - cl: C74456
+        cli: C12390
