--- a/source_data/instances/vital_signs/temp.yaml
+++ b/source_data/instances/vital_signs/temp.yaml
@@ -8,7 +8,7 @@
     - name: coding
       value_set:
       - cl: C66741
-        cli: C25206
+        cli: C174446
   has_items:
   - name: Date Time
     enabled: true
