--- a/source_data/instances/vital_signs/eweight.yaml
+++ b/source_data/instances/vital_signs/eweight.yaml
@@ -13,10 +13,12 @@
   has_items:
   - name: Date Time
     enabled: true
+    collect: true
     data_type:
     - name: date_time
   - name: Result
     enabled: true
+    collect: true
     data_type:
     - name: quantity
       value_set:
