--- a/source_data/instances/vital_signs/temp.yaml
+++ b/source_data/instances/vital_signs/temp.yaml
@@ -4,6 +4,7 @@
   identified_by:
     name: Test
     enabled: true
+    collect: true
     data_type:
     - name: coding
       value_set:
@@ -12,10 +13,12 @@
   has_items:
   - name: Date Time
     enabled: true
+    collect: true
     data_type:
     - name: date_time
   - name: Position
     enabled: true
+    collect: true
     data_type:
     - name: coding
       value_set:
@@ -35,6 +38,7 @@
         cli: C32141
   - name: Laterality
     enabled: true
+    collect: true
     data_type:
     - name: coding
       value_set:
@@ -46,6 +50,7 @@
         cli: C13332
   - name: Result
     enabled: true
+    collect: true
     data_type:
     - name: quantity
       value_set:
