--- a/source_data/templates/templates.yaml
+++ b/source_data/templates/templates.yaml
@@ -113,6 +113,7 @@
     mandatory: true
     enabled: true  
     collect: true
+    canonical: RESULT
     data_type: 
     - name: quantity
     - name: coding
