--- a/source_data/instances/laboratory/lb.yaml
+++ b/source_data/instances/laboratory/lb.yaml
@@ -223,3 +223,33 @@
     collect: true
     data_type:
     - name: date_time
+- name: "Hemoglobin"
+  based_on: "Base Laboratory"
+  narrower: [] 
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
+    data_type: 
+     - 
+      name: coding
+      value_set:
+      - 
+        cl: C65047
+        cli: C64848
+  has_items:
+  - name: "Result"
+    enabled: true  
+    collect: true 
+    data_type: 
+    - 
+      name: quantity
+      value_set:
+      - 
+        cl: C71620
+        cli: C64783
+  - name: Date Time
+    enabled: true
+    collect: true
+    data_type:
+    - name: date_time
