Tweak RDT data type

--- a/source_data/instances/malaria/malaria.yaml
+++ b/source_data/instances/malaria/malaria.yaml
@@ -133,7 +133,7 @@
     collect: true 
     data_type: 
     - 
-      name: quantity
+      name: coding
       value_set:
       - 
         cl: C102580
